--- a/index.html
+++ b/index.html
@@ -25,12 +25,19 @@
   </header>
 
   <!-- Navigation -->
-  <nav>
-    <a href="#home">Home</a>
-    <a href="#services">Services</a>
-    <a href="#gallery">Gallery</a>
-    <a href="#contact">Contact</a>
-  </nav>
+<nav class="navbar">
+  <div class="nav-container">
+    <div class="logo">
+      <img src="rock logo.png" alt="Rock Solid Logo" />
+    </div>
+    <div class="nav-links">
+      <a href="#home">Home</a>
+      <a href="#services">Services</a>
+      <a href="#gallery">Gallery</a>
+      <a href="#contact">Contact</a>
+    </div>
+  </div>
+</nav>
 
   <!-- Services Section -->
   <section id="services">
