aesthetics of site

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Rock Solid Concrete M&L</title>
   <link rel="stylesheet" href="styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Oswald:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -18,8 +20,8 @@
   <!-- Hero Header -->
   <header class="hero">
     <div class="overlay">
-      <h1>Rock Solid Concrete</h1>
-      <p>We Drive Projects to Completion with Quality</p>
+      <h1>Rock Solid Concrete M&L</h1>
+      <p>Serving Chicago & Surrounding Suburbs</p>
       <a href="#contact" class="btn">Get a Free Quote</a>
     </div>
   </header>
