aesthetics of site

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <nav class="navbar">
   <div class="nav-container">
     <div class="logo">
-      <img src="rock logo.png" alt="Rock Solid Logo" />
+      <img src="rock_logo.png" alt="Rock Solid Logo" />
     </div>
     <div class="nav-links">
       <a href="#home">Home</a>
