aesthetics of site

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Rock Solid Concrete Services. All rights reserved.</p>
+    <p>&copy; 2025 Rock Solid Concrete M&L All rights reserved.</p>
   </footer>
 
 </body>
