aesthetics of site

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <!-- Top bar -->
   <div class="topbar">
-    <p>Call us today! (123) 456-7890</p>
+    <p>Call us today! (773) 809-6086</p>
   </div>
 
   <!-- Hero Header -->
@@ -63,8 +63,8 @@
   <!-- Contact Section -->
   <section id="contact">
     <h2>Contact Us</h2>
-    <p>Email: info@rocksolidconcrete.com</p>
-    <p>Phone: (123) 456-7890</p>
+    <p>Email: rocksolidconcrete.ml@gmail.com</p>
+    <p>Phone: (773) 809-6086</p>
   </section>
 
   <!-- Footer -->
