--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <div class="nav-container">
     <div class="logo">
       <img src="rock_logo.png" alt="Rock Solid Logo" />
+     <title>Rock Solid Concrete M&L</title>
     </div>
     <div class="nav-links">
       <a href="#home">Home</a>
