--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +6,6 @@
   <title>Rock Solid Concrete M&L</title>
   <link rel="stylesheet" href="styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Anton&family=Oswald:wght@400;700&display=swap" rel="stylesheet">
-
 </head>
 
 <body>
@@ -18,7 +16,7 @@
   </div>
 
   <!-- Hero Header -->
-  <header class="hero">
+  <header class="hero" id="home">
     <div class="overlay">
       <h1>Rock Solid Concrete M&L</h1>
       <p>Serving Chicago & Surrounding Suburbs</p>
@@ -27,20 +25,20 @@
   </header>
 
   <!-- Navigation -->
-<nav class="navbar">
-  <div class="nav-container">
-    <div class="logo">
-      <img src="rock_logo.png" alt="Rock Solid Logo" />
-     <title>Rock Solid Concrete M&L</title>
+  <nav class="navbar">
+    <div class="nav-container">
+      <div class="logo">
+        <img src="rock_logo.png" alt="Rock Solid Logo" />
+        <span>Rock Solid Concrete M&L</span>
+      </div>
+      <div class="nav-links">
+        <a href="#home">Home</a>
+        <a href="#services">Services</a>
+        <a href="#gallery">Gallery</a>
+        <a href="#contact">Contact</a>
+      </div>
     </div>
-    <div class="nav-links">
-      <a href="#home">Home</a>
-      <a href="#services">Services</a>
-      <a href="#gallery">Gallery</a>
-      <a href="#contact">Contact</a>
-    </div>
-  </div>
-</nav>
+  </nav>
 
   <!-- Services Section -->
   <section id="services">
@@ -70,7 +68,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Rock Solid Concrete M&L All rights reserved.</p>
+    <p>&copy; 2025 Rock Solid Concrete M&L. All rights reserved.</p>
   </footer>
 
 </body>
