aesthetics of site

--- a/index.html
+++ b/index.html
@@ -59,6 +59,16 @@
     </div>
   </section>
 
+
+  <!--Gallery -->
+<section id = "gallery">
+  <h2>Our Gallery</h2>
+  <div class = "gallery">
+    <img src ="" alt = "Patio"/>
+
+  </div>
+</section>
+
   <!-- Contact Section -->
   <section id="contact">
     <h2>Contact Us</h2>
